--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ header .header-container .btns .login{
     color: #fff;
 }
 header .header-container .btns .signup{
-    background: greenyellow;
+    background: rgb(85, 255, 47);
     align-items: center;
     padding: .5rem 2rem;
     border-radius: 2rem;
