I'm done with the design

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 nav{
     position: fixed;
-    bottom: 2rem;
+    bottom: 1rem;
     left: 25%;
     width: 45rem;
     border-radius: 2rem;
@@ -470,4 +470,251 @@ header .img img{
     width: 13rem;
     object-fit: contain;
     z-index: 1000;
+}
+
+.faq-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #091b02;
+    width: 100%;
+    height: 45rem;
+    margin-top: 2rem;
+    color: #fff;
+    padding: 2rem;
+    position: relative;
+    z-index: 1;
+    transform: skewY(-2deg);
+    overflow: hidden;
+}
+.faq-section::after{
+    position: absolute;
+    top: -10rem;
+    right: -2rem;
+    content: '';
+    width: 30rem;
+    height: 30rem;
+    border-radius: 50%;
+    background-color: rgba(85, 255, 47, 0.355);
+    filter: blur(150px);
+    z-index: -2;
+}
+.faq-container{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transform: skewY(2deg);
+    padding: 1rem;
+    margin: 2px;
+    z-index: 1000;
+}
+.faq-container h1{
+    font-size: 2rem;
+}
+.faq-container .faq-head{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 1rem;
+}
+.faq-container .faq-paragraph{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 2rem;
+}
+.faq-container .faq-paragraph p{
+    letter-spacing: 1px;
+    font-size: 1rem;
+    font-weight: 100;
+    color: rgb(45, 84, 37);
+}
+.faq-container .faq-paragraph p > span{
+    color: #fff;
+}
+.faq-item{
+    width: 42rem;
+    padding: 1rem;
+    border-bottom: 1px solid #3b6f3a;
+    transform: skewY(-1deg);
+    overflow: hidden;
+}
+.faq-item:first-child{
+    border-radius: 1rem;
+    padding: 1rem;
+    background-color: #2e502e67;
+    border-bottom: 1px solid #3b6f3a;
+}
+.faq-item p{
+    padding: 10px 20px;
+    font-size: 0.95rem;
+    color: #d0d0d0;
+    transform: translateX(1rem);
+    margin-top: .5rem;
+}
+.faq-item summary{
+    padding: 15px 20px;
+    cursor: pointer;
+    font-weight: bold;
+    font-size: 1.1rem;
+    position: relative;
+    color: #fff;
+    list-style: none;
+}
+.faq-item summary::after{
+    content: "\25BC";
+    position: absolute;
+    right: 20px;
+    font-size: 1rem;
+    transition: transform 0.3s ease;
+}
+.faq-item[open] summary::after{
+    transform: rotate(180deg);
+}
+.marquee-container{
+    width: 100%;
+    background-color: #b3eb88;
+    overflow: hidden;
+    white-space: nowrap;
+    transform: skewY(-2deg);
+    position: relative;
+}
+.marquee{
+    display: inline-block;
+    animation: marquee 10s linear infinite;
+    padding: .8rem;
+}
+.marquee span {
+    display: inline-block;
+    font-size: 1.5rem;
+    font-weight: bold;
+    color: #173b0b;
+    margin-right: 2rem;
+}
+@keyframes marquee {
+    0%{
+        transform: translateX(0);
+    }
+    100%{
+        transform: translateX(-100%);
+    }
+}
+.action_call{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    margin-top: 4rem;
+    padding: 2rem;
+}
+.action_call > h5 {
+    color: gray;
+    font-weight: 100;
+    margin-bottom: 2rem;
+}
+.action_call h1{
+    font-size: 3rem;
+    margin-bottom: 1rem;
+}
+.action_call img{
+    width: 30rem;
+}
+.action_call .btn{
+    width: 20rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 1.5rem;
+}
+.action_call .btn > .loginbtn{
+    background-color: #cecbcb;
+    color: #000;
+    text-decoration: none;
+    padding: .5rem 2.2rem;
+    border-radius: 2rem;
+}
+.action_call .btn > .Get_started{
+    color: #000;
+    background: rgb(85, 255, 47);
+    padding: .7rem 2.2rem;
+    margin-bottom: 1rem;
+    text-decoration: none;
+    border-radius: 2rem;
+    font-weight: 600;
+}
+footer{
+    position: relative;
+    width: 100%;
+    height: 90vh;
+    padding: 2rem;
+    margin-top: 2rem;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background: #000;
+    color: #fff;
+}
+footer .logo img{
+    width: 10rem;
+    padding: 2rem;
+}
+footer .members{
+    width: 60%;
+    display: flex;
+    justify-content: space-around;
+}
+footer .members .supervisor{
+    display: flex;
+    flex-direction: column;
+}
+footer .members .supervisor h5{
+    width: 8rem;
+    padding: .5rem 2rem;
+    color: #000;
+    border-radius: 2rem;
+    background-color: orange;
+    margin-bottom: 1rem;
+}
+footer .members .supervisor a{
+    color: orange;
+    font-size: 1.2rem;
+    text-decoration: none;
+}
+footer .members .team-members{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+footer .members .team-members h5{
+    width: 8rem;
+    padding: .5rem 3rem;
+    color: #000;
+    border-radius: 2rem;
+    background-color: rgb(85, 255, 47);
+    margin-bottom: 1rem;
+}
+footer .members .team-members > a{
+    font-size: 1.2rem;
+    color: rgb(85, 255, 47);
+    margin-bottom: 1rem;
+    text-decoration: none;
+}
+footer .members .team-members a, h4{
+    color: rgb(85, 255, 47);
+    margin-bottom: 1rem;
+    cursor: pointer;
+}
+footer > img{
+    position: absolute;
+    left: 0;
+    bottom: 1rem;
+    width: 25rem;
 }
