--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 *{
     padding: 0;
     margin: 0;
     box-sizing: border-box;
+    
 }
 nav{
     position: fixed;
@@ -36,7 +38,7 @@ header{
     height: 100vh;
     background: #000;
     border-radius: 0 0 2.5rem 2.5rem ;
-
+    position: relative;
 }
 header .header-container{
     display: flex;
@@ -128,13 +130,15 @@ header .contents .btn > .Get_started{
     font-weight: 600;
 }
 header .boxes{
-    margin-top: 1rem;
+    width: 100%;
+    height: 20rem;
+    margin-top: 2rem;
     color: #fff;
     padding: 2rem;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    
+    position: absolute;
     
 }
 header .boxes span{
@@ -142,8 +146,8 @@ header .boxes span{
     justify-content: flex-end;
     align-items: flex-end;
     width: 15rem;
-    margin: 1rem;
-    padding: .7rem 2.5rem;
+    margin: .5rem 1rem;
+    padding: .6rem 2.5rem;
     border-radius: 2rem;
     transform: skewY(-11deg);
     animation: bend 2s infinite ease-in-out;
@@ -361,7 +365,7 @@ header .img img{
     justify-content: center;
     align-items: center;
     background: rgba(137, 43, 226, 0.136);
-    filter: blur(.4px);
+    backdrop-filter: blur(5px);
     border-radius: 2rem;
 }
 .designs_container .screen-container .second-screen .card-head{
@@ -401,7 +405,7 @@ header .img img{
     display: flex;
     flex-direction: column;
     background: rgba(137, 43, 226, 0.136);
-    filter: blur(.4px);
+    backdrop-filter: blur(5px);
     border-radius: 2rem;
 }
 .designs_container .screen-container .third-screen .card-head{
@@ -437,7 +441,7 @@ header .img img{
     display: flex;
     flex-direction: column;
     background: rgba(226, 168, 43, 0.105);
-    filter: blur(.4px);
+    backdrop-filter: blur(5px);
     border-radius: 2rem;
 }
 .designs_container .screen-container .forth-screen .card-head h5{
